force-app/main/default/objects/Candidate__c/fields/Candidate_number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_number__c</fullName>
    <externalId>true</externalId>
    <label>Candidate number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>