force-app/main/default/objects/Candidate__c/fields/On_number_of_lists__c.field-meta.xml
<CustomField>
    <fullName>On_number_of_lists__c</fullName>
    <inlineHelpText>Antall lister kandidaten er koblet til</inlineHelpText>
    <label>On number of lists</label>
    <summaryForeignKey>Candidate_on_list__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>