force-app/main/default/objects/Candidate__c/fields/Personnumber__c.field-meta.xml
<CustomField>
    <fullName>Personnumber__c</fullName>
    <externalId>true</externalId>
    <label>Personnumber</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>